--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
-  "name": "shopcart",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~45.0.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/jest": "^28.1.4",
-    "@types/react": "^18.0.15",
-    "@types/react-native": "^0.69.2",
-    "@types/react-test-renderer": "^18.0.0",
-    "typescript": "^4.7.4"
-  },
-  "private": true
+    "name": "shopcart",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "expo start --dev-client",
+        "android": "expo run:android",
+        "ios": "expo run:ios",
+        "web": "expo start --web",
+        "migrate": "sudo npx prisma migrate dev --schema ./src/database/prisma/schema.prisma --name "
+    },
+    "dependencies": {
+        "@prisma/client": "4.0.0",
+        "@reduxjs/toolkit": "^1.8.3",
+        "expo": "~45.0.0",
+        "expo-asset": "~8.5.0",
+        "expo-file-system": "~14.0.0",
+        "expo-splash-screen": "~0.15.1",
+        "expo-sqlite": "~10.2.0",
+        "expo-status-bar": "~1.3.0",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-native": "0.68.2",
+        "react-native-web": "0.17.7",
+        "react-redux": "^8.0.2",
+        "redux": "^4.2.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9",
+        "@redux-devtools/core": "^3.13.1",
+        "@types/jest": "^28.1.4",
+        "@types/react": "^18.0.15",
+        "@types/react-native": "^0.69.2",
+        "@types/react-test-renderer": "^18.0.0",
+        "prisma": "^4.0.0",
+        "typescript": "^4.7.4"
+    },
+    "private": true
 }
