--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "@prisma/client": "4.0.0",
+        "@react-navigation/bottom-tabs": "^6.3.2",
+        "@react-navigation/drawer": "^6.4.3",
         "@react-navigation/native": "^6.0.11",
         "@react-navigation/native-stack": "^6.7.0",
         "@reduxjs/toolkit": "^1.8.3",
@@ -23,6 +25,8 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-native": "0.68.2",
+        "react-native-gesture-handler": "~2.2.1",
+        "react-native-reanimated": "~2.8.0",
         "react-native-safe-area-context": "^4.3.1",
         "react-native-screens": "^3.15.0",
         "react-native-web": "0.17.7",
