--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@react-navigation/native": "^6.0.11",
         "@react-navigation/native-stack": "^6.7.0",
         "@reduxjs/toolkit": "^1.8.3",
+        "@types/styled-components-react-native": "^5.1.3",
         "expo": "~45.0.0",
         "expo-asset": "~8.5.0",
         "expo-file-system": "~14.0.0",
@@ -31,7 +32,8 @@
         "react-native-screens": "^3.15.0",
         "react-native-web": "0.17.7",
         "react-redux": "^8.0.2",
-        "redux": "^4.2.0"
+        "redux": "^4.2.0",
+        "styled-components": "^5.3.5"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
