--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "migrate": "sudo npx prisma migrate dev --schema ./src/database/prisma/schema.prisma --name "
     },
     "dependencies": {
+        "@nozbe/watermelondb": "^0.24.0",
         "@prisma/client": "4.0.0",
         "@react-navigation/bottom-tabs": "^6.3.2",
         "@react-navigation/drawer": "^6.4.3",
@@ -25,6 +26,7 @@
         "expo-status-bar": "~1.3.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-hook-form": "^7.34.2",
         "react-native": "0.68.2",
         "react-native-gesture-handler": "~2.2.1",
         "react-native-linear-gradient": "^2.6.2",
@@ -39,6 +41,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
+        "@babel/plugin-proposal-decorators": "^7.18.10",
         "@redux-devtools/core": "^3.13.1",
         "@types/jest": "^28.1.4",
         "@types/react": "^18.0.15",
