--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@prisma/client": "4.0.0",
+        "@react-native-google-signin/google-signin": "^8.0.0",
         "@react-navigation/bottom-tabs": "^6.3.2",
         "@react-navigation/drawer": "^6.4.3",
         "@react-navigation/native": "^6.0.11",
