--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "expo": "~45.0.0",
         "expo-asset": "~8.5.0",
         "expo-file-system": "~14.0.0",
+        "expo-linear-gradient": "~11.3.0",
         "expo-splash-screen": "~0.15.1",
         "expo-sqlite": "~10.2.0",
         "expo-status-bar": "~1.3.0",
