--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
         "android": "expo run:android",
         "ios": "expo run:ios",
         "web": "expo start --web",
-        "migrate": "sudo npx prisma migrate dev --schema ./src/database/prisma/schema.prisma --name "
+        "migrate": "sudo npx prisma migrate dev --schema ./src/database/prisma/schema.prisma --name ",
+        "install:apk-release": "adb install ./android/app/build/outputs/apk/release/app-release.apk",
+        "install:apk-debug": "adb install ./android/app/build/outputs/apk/debug/app-debug.apk"
     },
     "dependencies": {
+        "@hookform/resolvers": "^2.9.7",
         "@prisma/client": "4.0.0",
         "@react-native-google-signin/google-signin": "^8.0.0",
         "@react-navigation/bottom-tabs": "^6.3.2",
@@ -33,12 +36,13 @@
         "react-native-linear-gradient": "^2.6.2",
         "react-native-reanimated": "~2.8.0",
         "react-native-safe-area-context": "4.2.4",
-        "react-native-screens": "^3.15.0",
+        "react-native-screens": "~3.11.1",
         "react-native-svg": "12.3.0",
         "react-native-web": "0.17.7",
         "react-redux": "^8.0.2",
         "redux": "^4.2.0",
-        "styled-components": "^5.3.5"
+        "styled-components": "^5.3.5",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
