--- a/app.json
+++ b/app.json
@@ -6,6 +6,12 @@
         "version": "1.0.0",
         "assetBundlePatterns": [
             "**/*"
+        ],
+        "android": {
+            "googleServicesFile": "./google-services.json"
+        },
+        "plugins": [
+            "@react-native-google-signin/google-signin"
         ]
-    },
+    }
 }
