--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@hookform/resolvers": "^2.9.7",
         "@prisma/client": "4.0.0",
+        "@react-native-async-storage/async-storage": "~1.17.3",
         "@react-native-google-signin/google-signin": "^8.0.0",
         "@react-navigation/bottom-tabs": "^6.3.2",
         "@react-navigation/drawer": "^6.4.3",
@@ -21,6 +22,7 @@
         "@react-navigation/native-stack": "^6.7.0",
         "@reduxjs/toolkit": "^1.8.3",
         "@types/styled-components-react-native": "^5.1.3",
+        "date-fns": "^2.29.3",
         "expo": "~45.0.0",
         "expo-asset": "~8.5.0",
         "expo-file-system": "~14.0.0",
@@ -28,10 +30,12 @@
         "expo-splash-screen": "~0.15.1",
         "expo-sqlite": "~10.2.0",
         "expo-status-bar": "~1.3.0",
+        "lodash": "^4.17.21",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-hook-form": "^7.34.2",
         "react-native": "0.68.2",
+        "react-native-dotenv": "^3.3.1",
         "react-native-gesture-handler": "~2.2.1",
         "react-native-linear-gradient": "^2.6.2",
         "react-native-reanimated": "~2.8.0",
