--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "@hookform/resolvers": "^2.9.7",
         "@prisma/client": "4.0.0",
         "@react-native-async-storage/async-storage": "~1.17.3",
-        "@react-native-google-signin/google-signin": "^8.0.0",
         "@react-navigation/bottom-tabs": "^6.3.2",
         "@react-navigation/drawer": "^6.4.3",
         "@react-navigation/native": "^6.0.11",
@@ -25,8 +24,11 @@
         "date-fns": "^2.29.3",
         "expo": "~45.0.0",
         "expo-asset": "~8.5.0",
+        "expo-auth-session": "~3.6.1",
+        "expo-crypto": "~10.2.0",
         "expo-file-system": "~14.0.0",
         "expo-linear-gradient": "~11.3.0",
+        "expo-random": "~12.2.0",
         "expo-splash-screen": "~0.15.1",
         "expo-sqlite": "~10.2.0",
         "expo-status-bar": "~1.3.0",
