--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "react-redux": "^8.0.2",
         "redux": "^4.2.0",
         "styled-components": "^5.3.5",
+        "victory-native": "^36.6.8",
         "yup": "^0.32.11"
     },
     "devDependencies": {
